--- a/package.json
+++ b/package.json
@@ -1,16 +1,28 @@
 {
   "name": "exhbs",
   "version": "1.0.0",
+  "engines": {
+    "node": "8.11.2"
+  },
   "description": "express-handlebars",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
+  },
+   "repository": {
+    "type": "git",
+    "url": "https://github.com/ropas14/Handlebars.git"
   },
   "keywords": [
     "express"
   ],
   "author": "ropafadzo shumba",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/ropas14/Handlebars/issues"
+  },
+  "homepage": "https://github.com/ropas14/Handlebars#readme",
   "dependencies": {
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0"
